Fix overflow in x

--- a/css/home.css
+++ b/css/home.css
@@ -30,6 +30,7 @@ header {
     position: relative;
     display: inline-block;
     color: white;    
+    overflow-x: hidden;
 }
 header::before{
     content: "";
